syntax = "proto3";

option csharp_namespace = "PhiJudge.Server.Protos";
package agent;

service AgentConnectionService {
	rpc AgentConnect (AgentConnectRequest) returns (AgentConnectReply);
	rpc ServerDisconnect (ServerDisconnectRequest) returns (ServerDisconnectReply);
}

service AgentAuthorizationService {
	rpc Authorize (AuthorizeRequest) returns (AuthorizeReply);
	rpc Unauthorize (UnauthorizeRequest) returns (UnauthorizeReply);
}

service AgentProblemService {
	rpc SubmitSolution (SubmitSolutionRequest) returns (SubmitSolutionReply);
}

message AgentConnectRequest {
	string agentId = 1;
	string accessToken = 2;
}

message AgentConnectReply {
	bool status = 1;
	optional string reason = 2;
}

message ServerDisconnectRequest {
	string agentId = 1;
	string accessToken = 2;
}

message ServerDisconnectReply {
	bool status = 1;
	optional string reason = 2;
}

message AuthorizeRequest {
	string name = 1;
}

message AuthorizeReply {
	bool status = 1;
	optional string reason = 2;
	optional string agentId = 3;
	optional string accessToken = 4;
}

message UnauthorizeRequest {
	string agentId = 1;
	string accessToken = 2;
}

message UnauthorizeReply {
	string status = 1;
	optional string reason = 2;
}

message SubmitSolutionRequest {

}

message SubmitSolutionReply {
	
}
